<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/attendanceOptionsGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/certifyPresenceNavItem"
            android:icon="@drawable/ic_menu_certify_attendance"
            android:title="@string/nav_certify_presence"/>
        <item
            android:id="@+id/reviewAttendancesNavItem"
            android:icon="@drawable/ic_menu_review_attendances"
            android:title="@string/nav_review_attendances"/>
        <item
            android:id="@+id/settingsNavItem"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_settings"/>
    </group>
    <group
        android:id="@+id/logoutOptionsGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/logoutNavItem"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/nav_logout"/>
    </group>
</menu>
