<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/lay_activity_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.robert.android.unioviscope.ui.activity.SettingsActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/UniOviScopeTheme.AppBarOverlay"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:paddingLeft="15dp"
                app:contentInsetLeft="10dp"
                app:contentInsetStart="10dp"
                app:contentInsetStartWithNavigation="10dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:navigationIcon="@mipmap/ic_launcher"
                app:popupTheme="@style/UniOviScopeTheme.PopupOverlay">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/faceRecognitionLayout"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <ImageView
                android:id="@+id/ivFaceRecognitionLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/cont_desc_face_recognition_logo"
                android:src="@drawable/ic_face_recognition"
                android:tint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvFaceRecognition"
                android:layout_width="235dp"
                android:layout_height="30dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/pref_face_recognition"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/ivFaceRecognitionLogo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04"/>

            <TextView
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/pref_face_recognition_description"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/ivFaceRecognitionLogo"
                app:layout_constraintTop_toBottomOf="@+id/tvFaceRecognition"/>

            <Switch
                android:id="@+id/swFaceRecognition"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.513"/>

        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/firstDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/faceRecognitionLayout"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/homeScreenLayout"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstDivider">

            <ImageView
                android:id="@+id/ivHomeScreenLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/cont_desc_home_screen_logo"
                android:src="@drawable/ic_home_screen"
                android:tint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvHomeScreen"
                android:layout_width="235dp"
                android:layout_height="30dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/pref_home_screen"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/ivHomeScreenLogo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04"/>

            <TextView
                android:layout_width="235dp"
                android:layout_height="50dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/pref_home_screen_description"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/ivHomeScreenLogo"
                app:layout_constraintTop_toBottomOf="@+id/tvHomeScreen"/>

            <Switch
                android:id="@+id/swHomeScreen"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.513"/>

        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/secondDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeScreenLayout"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/languageLayout"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondDivider">

            <ImageView
                android:id="@+id/ivLanguageLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/cont_desc_language_logo"
                android:src="@drawable/ic_language"
                android:tint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/pref_language"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/ivLanguageLogo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.04"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/pref_language_description"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/ivLanguageLogo"
                app:layout_constraintTop_toBottomOf="@+id/tvLanguage"/>

            <Spinner
                android:id="@+id/spLanguage"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.525"/>

        </android.support.constraint.ConstraintLayout>

        <View
            android:id="@+id/thirdDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/languageLayout"/>

        <include
            layout="@layout/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/appbar"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>